<resources>
    <string name="app_name">APP2</string>
    <string name="start_tex">Введите своё имя</string>
    <string name="button_start_text">НАЧАТЬ</string>
    <string name="start_inf">Ваш личный помошник в визуализации
        и управлении вашими финансами.</string>
    <string name="insert_name">Введите ваше имя</string>
    <string name="name_app">PFC</string>
    <string name="image">TODO</string>
    <string name="title_activity_m_a_i_n_m_e_n_u">MAINMENU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="purse">Мой кошелек</string>
    <string name="menu_home">Главная</string>
    <string name="menu_stat">Статистика</string>
    <string name="menu_bill">Счет</string>
    <string name="menu_goal">Цель</string>
    <string name="menu_debt">Долг</string>
    <string name="menu_shop">Список покупок</string>
    <string name="balance">Баланс</string>
    <string name="rasxod">Расходы</string>
    <string name="doxod">Доходы</string>
</resources>