<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.app2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_stat"
        android:name="com.example.app2.ui.statistic.StatFragment"
        android:label="@string/menu_stat"
        tools:layout="@layout/fragment_stat" />

    <fragment
        android:id="@+id/nav_bill"
        android:name="com.example.app2.ui.bill.BillFragment"
        android:label="@string/menu_bill"
        tools:layout="@layout/fragment_bill" />

    <fragment
        android:id="@+id/nav_goal"
        android:name="com.example.app2.ui.goal.GoalFragment"
        android:label="@string/menu_goal"
        tools:layout="@layout/fragment_goal" />

    <fragment
        android:id="@+id/nav_debt"
        android:name="com.example.app2.ui.debt.DebtFragment"
        android:label="@string/menu_debt"
        tools:layout="@layout/fragment_debt" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.app2.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />
</navigation>