<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_start"
        android:layout_width="99dp"
        android:layout_height="49dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="80dp"
        android:background="#007dff"
        android:fontFamily="@font/allerta"
        android:text="@string/button_start_text"
        android:textColor="#ffffff"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/start_inf"
        android:layout_width="316dp"
        android:layout_height="63dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/alef_bold"
        android:gravity="center"
        android:text="@string/start_inf"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="68dp"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="142dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/i_1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="68dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/name_app"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:srcCompat="@drawable/b" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="128dp"
        android:layout_height="68dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/name_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/a" />

    <TextView
        android:id="@+id/name_app"
        android:layout_width="181dp"
        android:layout_height="51dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="83dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/name_app"
        android:textColor="#000000"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/start_inf"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>