<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/balance_t"
        android:layout_width="144dp"
        android:layout_height="24dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="167dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/balance"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balance_m"
        android:layout_width="89dp"
        android:layout_height="24dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="156dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="-1253"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_t" />

    <Button
        android:id="@+id/rasxod"
        android:layout_width="202dp"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="496dp"
        android:background="@color/but_not_press_rasx"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/rasxod"
        android:textAllCaps="false"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/doxod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_m" />

    <Button
        android:id="@+id/doxod"
        android:layout_width="202dp"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="496dp"
        android:background="@color/but_not_press_dox"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/doxod"
        android:textAllCaps="false"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rasxod"
        app:layout_constraintTop_toBottomOf="@+id/balance_m" />

    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:id="@+id/hor_bar_chart"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/doxod"
        tools:layout_editor_absoluteX="4dp"/>

    <EditText
        android:id="@+id/ras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/dox"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/dox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="243dp"
        android:layout_height="85dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="38dp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/ras" />

</androidx.constraintlayout.widget.ConstraintLayout>